deploy-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feature-flag-admin # TODO 变量
  namespace: app
  labels:
    appid: feature-flag-admin # TODO 变量
spec:
  replicas: 2 # TODO 变量
  selector:
    matchLabels:
      appid: feature-flag-admin # TODO 变量
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: app
      labels:
        appid: feature-flag-admin # TODO 变量
    spec:
      imagePullSecrets:
        - name: my-cluster-registry-secret
      containers:
        - image: registry.my-cluster.co:5000/feature-flag-admin # TODO 变量
          name: feature-flag-admin # TODO 变量
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
            - containerPort: 9000
          # volumeMounts:
          #   - name: XXXX
          #     mountPath: XXXX
---
apiVersion: v1
kind: Service
metadata:
  name: feature-flag-admin # TODO 变量
  namespace: app
  labels:
    appid: feature-flag-admin # TODO 变量
spec:
  type: ClusterIP
  selector:
    appid: feature-flag-admin # TODO 变量
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-feature-flag-admin # TODO 变量
  namespace: middleware
  labels:
    appid: feature-flag-admin # TODO 变量
spec:
  rules:
    - host: api.my-cluster.co # TODO 变量
      http:
        paths:
        - path: /x/admin/feature-flag # TODO 变量
          pathType: Prefix
          backend:
            service:
              name: feature-flag-admin # TODO 变量
              port:
                number: 8000
